--- a/product.html
+++ b/product.html
@@ -4,10 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тренировки по смешанным единоборствам</title>
+    <title>Каталог</title>
 </head>
 
 <body>
+    <lu>
+        <il>
+            <a href="index.html">
+                Главная
+            </a>
+        </il>
+        <il>
+            <a href="procuct.html">
+                Каталог
+            </a>
+        </il>
+        <il>
+            <a href="#">
+                Контакты
+            </a>
+        </il>
+    </lu>
+    <hr>
     <h1>Описание товара</h1>
     <p>Групповые тренировки 8 - 10 лет</p>
     <h2>Характеристики товара</h2>
