--- a/traning_for_8-10_year.html
+++ b/traning_for_8-10_year.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MKS Pride</title>
-    <ul>
+    <title>тренировки для детей 8-10 лет</title>
+     <ul>
         <li>
             <a href="index.html">
                 Главная
@@ -25,17 +24,19 @@
 </head>
 
 <body>
-
     <hr>
-    <h1>
-        Вас приветствует спортивный клуб MSK Pride
-    </h1>
-    <img src="im1.png" alt="это моя фотография" title="это моя фотография" width="400" height="300" />
-    <hr>
+    <p>Предлагаем Вам групповые тренировк для детей возрастом от 8 до 10 лет</p>
+    
+    Тренировки проходят по следующему расписанию: <br>
+    понедельник c 15:00 до 16:30 <br>
+    среда c 15:00 до 16:30 <br>
+    пятница c 15:00 до 16:30 <br>
+    стоимость абонемента <i>4000 рублей в месяц</i>
+    </p>
     <footer>
+        <hr>
         &copy; Sukhovitskiy Stanislav <br>
         Все права защищены <br>
-    </footer>
+    </footer> 
 </body>
-
 </html>
