--- a/product.html
+++ b/product.html
@@ -5,65 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
-</head>
-
-<body>
-    <lu>
-        <il>
+    <ul>
+        <li>
             <a href="index.html">
                 Главная
             </a>
-        </il>
-        <il>
-            <a href="procuct.html">
+        </li>
+        <li>
+            <a href="product.html">
                 Каталог
             </a>
-        </il>
-        <il>
+        </li>
+        <li>
             <a href="#">
                 Контакты
             </a>
-        </il>
-    </lu>
-    <hr>
-    <h1>Описание товара</h1>
-    <p>Групповые тренировки 8 - 10 лет</p>
-    <h2>Характеристики товара</h2>
-    <p>Предлагаем Вам групповые тренировк для детей возрастом от 8 до 10 лет</p>
-    <h3>Подробное описание товара</h3>
-    Тренировки проходят по следующему расписанию: <br>
-    понедельник c 15:00 до 16:30 <br>
-    среда c 15:00 до 16:30 <br>
-    пятница c 15:00 до 16:30 <br>
-    стоимость абонемента <i>4000 рублей в месяц</i>
-    </p>
+        </li>
+    </ul>
+</head>
 
-    <h1>Описание товара</h1>
-    <p>Групповые тренировки 11 - 13 лет</p>
-    <h2>Характеристики товара</h2>
-    <p>Предлагаем Вам групповые тренировк для детей возрастом от 11 до 13 лет</p>
-    <h3>Подробное описание товара</h3>
+<body>
+
+    <hr>
+    <h1>
+        <a href="traning_for_8-10_year.html">
+            Групповые тренировки 8 - 10 лет
+        </a></h1>
+
+
+
+    <h1><a href="#">
+        Групповые тренировки 11 - 13 лет
+    </a></h1>
+
+    <!-- <p>Предлагаем Вам групповые тренировк для детей возрастом от 11 до 13 лет</p>
+    
     <p>
         Тренировки проходят по следующему расписанию: <br>
         понедельник c 16:30 до 18:00 <br>
         среда c 16:30 до 18:00 <br>
         пятница c 16:30 до 18:00 <br>
         стоимость абонемента на месяц <i>4000 рублей в месяц</i>
-    </p>
+    </p> -->
 
-    <h1>Описание товара</h1>
-    <p>Групповые тренировки от 14 лет</p>
-    <h2>Характеристики товара</h2>
-    <p>Предлагаем Вам групповые тренировк для детей возрастом от 14 лет</p>
-    <h3>Подробное описание товара</h3>
+    <h1><a href="#">
+        Групповые тренировки от 14 лет
+    </a></h1>
+
+
+    <!-- <p>Предлагаем Вам групповые тренировк для детей возрастом от 14 лет</p>
+
     <p>
         Тренировки проходят по следующему расписанию: <br>
         понедельник c 18:20 до 20:30 <br>
         среда c 18:20 до 20:30 <br>
         пятница c 18:20 до 20:30 <br>
         стоимость абонемента на месяц <i>4000 рублей в месяц</i>
-    </p>
-    <footer>Все права защищены</footer>
+    </p> -->
+    <footer>
+        <hr>
+        &copy; Sukhovitskiy Stanislav <br>
+        Все права защищены <br>
+    </footer>
 </body>
 
 </html>
