--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="contacts.html">
                 Контакты
             </a>
         </li>
@@ -32,36 +32,14 @@
             Групповые тренировки 8 - 10 лет
         </a></h1>
 
+    <h1><a href="training_for_11-13_year.html">
+            Групповые тренировки 11 - 13 лет
+        </a></h1>
 
+    <h1><a href="training_for_others.html">
+            Групповые тренировки от 14 лет
+        </a></h1>
 
-    <h1><a href="#">
-        Групповые тренировки 11 - 13 лет
-    </a></h1>
-
-    <!-- <p>Предлагаем Вам групповые тренировк для детей возрастом от 11 до 13 лет</p>
-    
-    <p>
-        Тренировки проходят по следующему расписанию: <br>
-        понедельник c 16:30 до 18:00 <br>
-        среда c 16:30 до 18:00 <br>
-        пятница c 16:30 до 18:00 <br>
-        стоимость абонемента на месяц <i>4000 рублей в месяц</i>
-    </p> -->
-
-    <h1><a href="#">
-        Групповые тренировки от 14 лет
-    </a></h1>
-
-
-    <!-- <p>Предлагаем Вам групповые тренировк для детей возрастом от 14 лет</p>
-
-    <p>
-        Тренировки проходят по следующему расписанию: <br>
-        понедельник c 18:20 до 20:30 <br>
-        среда c 18:20 до 20:30 <br>
-        пятница c 18:20 до 20:30 <br>
-        стоимость абонемента на месяц <i>4000 рублей в месяц</i>
-    </p> -->
     <footer>
         <hr>
         &copy; Sukhovitskiy Stanislav <br>
