--- a/training_for_11-13_year.html
+++ b/training_for_11-13_year.html
@@ -4,17 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>тренировки для детей 8-10 лет</title>
+    <title>тренировки для детей 11-13 лет</title>
     <ul>
         <li>
             <a href="index.html">
                 Главная
             </a>
-            <ul>
-                <li>Первый элемент вложенного списка</li>
-                <li>Второй элемент вложенного списка</li>
-                <li>Третий элемент вложенного списка</li>
-            </ul>
         </li>
         <li>
             <a href="product.html">
@@ -34,15 +29,17 @@
     <h2>Записывайтесь на пробное занятие!</h2>
     <input type="text" size="30" placeholder="Ваше Имя"> <br>
     <input type="text" size="30" placeholder="номер телефона">
-    <p>Предлагаем Вам групповые тренировк для детей возрастом от 8 до 10 лет</p>
+    <p>Предлагаем Вам групповые тренировк для детей возрастом от 11 до 13 лет</p>
     <img src="img_for_taining_8-10_year.jpg" alt="это моя фотография" title="это моя фотография" width="500"
         height="300" />
     <br>
-    Тренировки проходят по следующему расписанию: <br>
-    понедельник c 15:00 до 16:30 <br>
-    среда c 15:00 до 16:30 <br>
-    пятница c 15:00 до 16:30 <br>
-    стоимость абонемента <i>4000 рублей в месяц</i>
+    <p>
+        Тренировки проходят по следующему расписанию: <br>
+        понедельник c 16:30 до 18:00 <br>
+        среда c 16:30 до 18:00 <br>
+        пятница c 16:30 до 18:00 <br>
+        стоимость абонемента на месяц <i>4000 рублей в месяц</i>
+    </p>
     </p>
     <footer>
         <hr>
