--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="contacts.html">
                 Контакты
             </a>
         </li>
@@ -31,6 +31,7 @@
         Вас приветствует спортивный клуб MSK Pride
     </h1>
     <img src="im1.png" alt="это моя фотография" title="это моя фотография" width="400" height="300" />
+    
     <hr>
     <footer>
         &copy; Sukhovitskiy Stanislav <br>
