--- a/product.html
+++ b/product.html
@@ -4,29 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Каталог</title>
-    <ul>
-        <li>
-            <a href="index.html">
-                Главная
-            </a>
-        </li>
-        <li>
-            <a href="product.html">
-                Каталог
-            </a>
-        </li>
-        <li>
-            <a href="contacts.html">
-                Контакты
-            </a>
-        </li>
-    </ul>
 </head>
 
 <body>
 
-    <hr>
+    <div class="header">
+        <ul>
+            <li class="liStyle"><a class="menuRef" href="index.html"> Главная </a> </li>
+            <li class="liStyle"><a class="menuRef" href="product.html"> Каталог </a> </li>
+            <li class="liStyle"><a class="menuRef" href="contacts.html"> Контакты </a> </li>
+        </ul>
+    </div>
     <h1>
         <a href="traning_for_8-10_year.html">
             Групповые тренировки 8 - 10 лет
@@ -40,11 +30,12 @@
             Групповые тренировки от 14 лет
         </a></h1>
 
-    <footer>
-        <hr>
-        &copy; Sukhovitskiy Stanislav <br>
-        Все права защищены <br>
-    </footer>
+        <div class="Footer">
+            <footer>
+                &copy; Sukhovitskiy Stanislav <br>
+                Все права защищены <br>
+            </footer>
+        </div>
 </body>
 
 </html>
