--- a/contacts.html
+++ b/contacts.html
@@ -4,29 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>MKS Pride</title>
-    <ul>
-        <li>
-            <a href="index.html">
-                Главная
-            </a>
-        </li>
-        <li>
-            <a href="product.html">
-                Каталог
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                Контакты
-            </a>
-        </li>
-    </ul>
+    
 </head>
 
 <body>
 
-    <hr>
+    <div class="header">
+        <ul>
+            <li class="liStyle"><a class="menuRef" href="index.html"> Главная </a> </li>
+            <li class="liStyle"><a class="menuRef" href="product.html"> Каталог </a> </li>
+            <li class="liStyle"><a class="menuRef" href="contacts.html"> Контакты </a> </li>
+        </ul>
+    </div>
     <h1>
         Контакты
     </h1>
@@ -35,11 +26,13 @@
     <input type="text" size="30" placeholder="номер телефона"><br>
     <h2>Мы находимся здесь!</h2>
     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af036b05c0905eab6a0645d356f3e9a2f7266b44f108fd222e37aac05a0b59a1e&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-    <hr>
-    <footer>
-        &copy; Sukhovitskiy Stanislav <br>
-        Все права защищены <br>
-    </footer>
+  
+    <div class="Footer">
+        <footer>
+            &copy; Sukhovitskiy Stanislav <br>
+            Все права защищены <br>
+        </footer>
+    </div>
 </body>
 
 </html>
