--- a/index.html
+++ b/index.html
@@ -4,39 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>MKS Pride</title>
-    <ul>
-        <li>
-            <a href="index.html">
-                Главная
-            </a>
-        </li>
-        <li>
-            <a href="product.html">
-                Каталог
-            </a>
-        </li>
-        <li>
-            <a href="contacts.html">
-                Контакты
-            </a>
-        </li>
-    </ul>
 </head>
 
 <body>
+    <div class="header">
+        <ul>
+            <li class="liStyle"><a class="menuRef" href="index.html"> Главная </a> </li>
+            <li class="liStyle"><a class="menuRef" href="product.html"> Каталог </a> </li>
+            <li class="liStyle"><a class="menuRef" href="contacts.html"> Контакты </a> </li>
+        </ul>
+    </div>
 
-    <hr>
     <h1>
         Вас приветствует спортивный клуб MSK Pride
     </h1>
     <img src="im1.png" alt="это моя фотография" title="это моя фотография" width="400" height="300" />
     
-    <hr>
-    <footer>
-        &copy; Sukhovitskiy Stanislav <br>
-        Все права защищены <br>
-    </footer>
+    <div class="Footer">
+        <footer>
+            &copy; Sukhovitskiy Stanislav <br>
+            Все права защищены <br>
+        </footer>
+    </div>
 </body>
 
 </html>
